--- a/module_usercenter/src/main/res/layout/activity_login.xml
+++ b/module_usercenter/src/main/res/layout/activity_login.xml
@@ -20,6 +20,24 @@
         android:orientation="vertical">
 
         <EditText
+            android:id="@+id/et_login_url"
+            style="@style/LoginEditTextStyle"
+            android:drawableLeft="@drawable/login_icon_url"
+            android:drawablePadding="10dp"
+            android:hint="@string/please_input_username"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:nextFocusForward="@+id/et_login_password"
+            android:text="http://10.2.255.2:8088" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@color/gray_ea" />
+
+        <EditText
             android:id="@+id/et_login_username"
             style="@style/LoginEditTextStyle"
             android:drawableLeft="@drawable/login_icon_phone"
@@ -28,7 +46,7 @@
             android:imeOptions="actionNext"
             android:inputType="text"
             android:nextFocusForward="@+id/et_login_password"
-            android:text="Hello123456" />
+            android:text="admin" />
 
         <View
             android:layout_width="match_parent"
@@ -60,7 +78,7 @@
                 android:hint="@string/please_input_password"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:text=" 123456" />
+                android:text="12345678" />
 
         </RelativeLayout>
 
@@ -74,10 +92,10 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
         android:paddingBottom="10dp"
-        android:visibility="gone"
         android:text="@string/goto_register"
         android:textColor="@color/black_61"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/btn_login"
