--- a/module_usercenter/src/main/res/layout/activity_login.xml
+++ b/module_usercenter/src/main/res/layout/activity_login.xml
@@ -19,23 +19,6 @@
         android:background="@drawable/login_input_bg"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_login_url"
-            style="@style/LoginEditTextStyle"
-            android:drawableLeft="@drawable/login_icon_url"
-            android:drawablePadding="10dp"
-            android:hint="@string/please_input_username"
-            android:imeOptions="actionNext"
-            android:inputType="text"
-            android:nextFocusForward="@+id/et_login_password"
-            android:text="http://10.2.255.2:8088" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/gray_ea" />
 
         <EditText
             android:id="@+id/et_login_username"
@@ -46,7 +29,7 @@
             android:imeOptions="actionNext"
             android:inputType="text"
             android:nextFocusForward="@+id/et_login_password"
-            android:text="admin" />
+            android:text="caojian" />
 
         <View
             android:layout_width="match_parent"
@@ -71,14 +54,45 @@
             <EditText
                 android:id="@+id/et_login_password"
                 style="@style/LoginEditTextStyle"
-                android:layout_marginRight="15dp"
+                android:layout_marginRight="28dp"
                 android:layout_toLeftOf="@id/cb_login_pwd_visible"
                 android:drawableLeft="@drawable/login_icon_password"
                 android:drawablePadding="10dp"
                 android:hint="@string/please_input_password"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:text="12345678" />
+                android:text="123456" />
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@color/gray_ea" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+
+            <ImageView
+                android:id="@+id/iv_login_captcha_img"
+                android:layout_width="140dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:background="@color/gray_f5"
+                android:layout_centerVertical="true"
+                android:layout_margin="8dp" />
+
+            <EditText
+                android:id="@+id/et_login_code"
+                style="@style/LoginEditTextStyle"
+                android:layout_marginRight="28dp"
+                android:layout_toLeftOf="@id/iv_login_captcha_img"
+                android:drawableLeft="@drawable/login_icon_password"
+                android:drawablePadding="10dp"
+                android:imeOptions="actionDone" />
 
         </RelativeLayout>
 
@@ -93,9 +107,20 @@
         android:layout_marginRight="20dp"
         android:paddingBottom="10dp"
         android:text="@string/goto_register"
+        android:visibility="gone"
         android:textColor="@color/black_61"
-        android:textSize="14sp"
-        android:visibility="gone" />
+        android:textSize="14sp"/>
+    <TextView
+        android:id="@+id/tv_setting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
+        android:paddingBottom="10dp"
+        android:text="@string/goto_setting_ip"
+        android:textColor="@color/black_61"
+        android:textSize="14sp"/>
 
     <Button
         android:id="@+id/btn_login"
