--- a/module_usercenter/src/main/res/layout/activity_setting.xml
+++ b/module_usercenter/src/main/res/layout/activity_setting.xml
@@ -18,11 +18,11 @@
         android:paddingRight="20dp">
 
         <EditText
-            android:id="@+id/et_setting_ip"
+            android:id="@+id/et_setting_host"
             style="@style/RegisterEditTextStyle"
             android:layout_marginTop="20dp"
             android:drawablePadding="10dp"
-            android:hint="@string/please_input_ip"
+            android:hint="@string/please_input_host"
             android:imeOptions="actionNext"
             android:nextFocusForward="@+id/et_forget_pwd_verify_code" />
 
