零三零零四

--- a/module_main/src/main/res/layout/activity_about.xml
+++ b/module_main/src/main/res/layout/activity_about.xml
@@ -26,7 +26,7 @@
         android:focusable="false"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:text="本项目基于 MVP + RxJava2 + Retrofit开发的组件化 App,利用周末时间完成。\n\n项目地址： https://github.com/xing16/WanAndroid"
+        android:text="作为工业4.0体系的主导者和创新驱动者，中工互联（北京）智能科技有限公司运用在智能制造领域的优势和积累，践行“新基建”中数字化、智能化的布局者角色。\n\n官网： http://ciictec.com/"
         android:textColor="@color/black_333"
         android:textSize="16sp" />
 
