--- a/module_main/src/main/res/layout/fragment_project.xml
+++ b/module_main/src/main/res/layout/fragment_project.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.ProjectFragment">
+    tools:context=".fragment.HandleFragment">
 
     <View
         android:id="@+id/fake_status_bar"
@@ -25,7 +25,6 @@
             android:layout_height="44dp"
             app:tabBackground="@android:color/white"
             app:tabIndicatorFullWidth="false"
-            app:tabMode="scrollable"
             app:tabTextColor="@color/black_333" />
 
     <!--</android.support.design.widget.AppBarLayout>-->
