--- a/module_main/src/main/res/layout/fragment_system.xml
+++ b/module_main/src/main/res/layout/fragment_system.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.ProjectFragment">
+    tools:context=".fragment.HandleFragment">
 
     <View
         android:id="@+id/fake_status_bar"
