--- a/module_usercenter/src/main/res/layout/activity_login.xml
+++ b/module_usercenter/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="60dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/login_input_bg"
         android:orientation="vertical">
@@ -61,40 +61,10 @@
                 android:hint="@string/please_input_password"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:text="123456" />
+                android:text="caojian" />
 
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/gray_ea" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
-
-            <ImageView
-                android:id="@+id/iv_login_captcha_img"
-                android:layout_width="140dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentRight="true"
-                android:background="@color/gray_f5"
-                android:layout_centerVertical="true"
-                android:layout_margin="8dp" />
-
-            <EditText
-                android:id="@+id/et_login_code"
-                style="@style/LoginEditTextStyle"
-                android:layout_marginRight="28dp"
-                android:layout_toLeftOf="@id/iv_login_captcha_img"
-                android:drawableLeft="@drawable/login_icon_password"
-                android:drawablePadding="10dp"
-                android:imeOptions="actionDone" />
-
-        </RelativeLayout>
 
     </LinearLayout>
 
@@ -107,9 +77,10 @@
         android:layout_marginRight="20dp"
         android:paddingBottom="10dp"
         android:text="@string/goto_register"
-        android:visibility="gone"
         android:textColor="@color/black_61"
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/tv_setting"
         android:layout_width="wrap_content"
@@ -120,7 +91,7 @@
         android:paddingBottom="10dp"
         android:text="@string/goto_setting_ip"
         android:textColor="@color/black_61"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/btn_login"
